<resources>
    <string name="app_name">HonBabStop</string>
    <string name="title_activity_settings">Settings</string>


    <!-- kakao login key -->
    <string name="kakao_app_key" translatable="false">24154cc7f0ca64eb98129e6589f7b1a6</string>
    <!--facebook login key-->
    <string name="facebook_app_id">1887958868128261</string>
    <!--facebook login chrome tab key-->
    <string name="fb_login_protocol_scheme">1887958868128261</string>
    <!--google login key-->
    <string name="google_web_client_id">719710972079-o28mt4834u0n4844089ujfbs8o48oah0.apps.googleusercontent.com</string>

    <!-- LoginActivity -->
    <string name="login_title1">혼밥 Stop에</string>
    <string name="login_title2">오신 것을 환영 합니다.</string>

    <string name="login_desc1">혼밥 이제 그만!</string>
    <string name="login_desc2">외로움에 떨고 있는</string>
    <string name="login_desc3">혼밥러들을 찾아 떠나세요!</string>

    <!-- ChatListFragment -->
    <string name="member_count_label">모집인원</string>

    <!--  ProfileFragment -->
    <string name="empty_name">이름을 입력해주세요!</string>
    <string name="empty_email">이메일을 입력해주세요!</string>
    <string name="empty_status">상태를 입력해주세요!</string>
    <string name="empty_age">나이를 입력해주세요!</string>
    <string name="empty_gender">성별을 입력해주세요!</string>
    <string name="empty_address">주소를 입력해주세요!</string>

    <string name="dialog_title">사진 선택</string>
    <string name="dialog_content">갤러리에서 가져올까요?</string>

    <!--  UpdateProfileActivitiy -->
    <string name="profile_update_name_hint">이름</string>
    <string name="profile_update_email_hint">이메일</string>
    <string name="profile_update_status_hint">상태메세지</string>
    <string name="profile_update_gender_hint">성별</string>
    <string name="profile_update_age_hint">나이</string>
    <string name="profile_update_address_hint">주소</string>

    <string-array name="gender_array">
        <item>남자</item>
        <item>여자</item>
    </string-array>


    <!-- Action Bar MainActivity -->
    <string name="action_sign_out">SignOut</string>
    <!-- Action Bar UpdateProfileActivity -->
    <string name="action_save">저장</string>
    <!-- Action Bar AddChatActivity -->
    <string name="action_add_chat">추가</string>


    <!--  Bottom Navigation -->
    <string name="btm_nav_chat_list">리스트</string>
    <string name="btm_nav_my_chat">나의 채팅</string>
    <string name="btm_nav_friends">내친구</string>
    <string name="btm_nav_profile">프로필</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
